# hbwebsite

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
public/vigor/: index.html
scripts/: sync-dashboard.mjs
src/components/: Footer.astro  Header.astro  Hero.astro  Photo.astro  PhotoPlaceholder.astro
src/data/: sites.ts
src/layouts/: Base.astro
src/pages/: about.astro  contact.astro  index.astro  vineyards.astro
src/styles/: global.css
vineyard-vigor/: .gitignore  README.md  main.py  pyproject.toml
vineyard-vigor/.claude/skills/vigor-dashboard/: SKILL.md
vineyard-vigor/data/: blocks.geojson  blocks.geojson.bak
vineyard-vigor/data/processed/: block_timeseries.parquet  landsat_timeseries.parquet  outlook_summary.parquet  season_analogs.parquet  season_features.parquet  season_outlook.parquet  vigor_alerts.parquet  vigor_zones.parquet
vineyard-vigor/notebooks/: 00_draw_blocks.ipynb  01_explore.ipynb  02_timeseries.ipynb  03_features.ipynb  04_zones.ipynb  05_alerts.ipynb  06_dashboard.ipynb
vineyard-vigor/scripts/: backfill_landsat.py  backfill_s2.py  smoke_test.py  weekly_update.cmd  weekly_update.py
vineyard-vigor/src/vigor/: __init__.py  _webassets.py  clean.py  dashboard.py  extract.py  features.py  ingest.py  ml.py  plots.py  vigor_alerts.py  webdash.py  zones.py
vineyard-vigor/tests/: test_clean.py  test_dashboard.py  test_features.py  test_ingest.py  test_ml.py  test_vigor_alerts.py  test_zones.py
vineyard-vigor/tests/fixtures/: sample_extract.csv
