[project]
name = "vineyard-vigor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.35",
    "geemap>=0.38.3",
    "geopandas>=1.1.4",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "rfc3987>=1.3.8",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
